day1
.append()                  #appends on dlist.append('!')
.join()                    #join '*'.join(dlist)
.split()                   #splits on specified .split(':')
___________________________________________________________________________________________________________________________________________________________________________
list                       #mutable
tuple                      #immutable
lst = []                   #blank list
tup = ()                   #blank tuple

  9 lst = []
 10 a = email.split('@')
 11 b = a[1].split('.')
 12 
 13 lst.append(a[0])
 14 lst.append(b[0])
 15 lst.append(b[1])
 16 print(lst)
___________________________________________________________________________________________________________________________________________________________________________
  1 email = 'name@domain.com'
  2 '''
  3 a = email.split('@')
  4 b = '.'.join(a)
  5 c = b.split('.')
  6 print(c)
  7 '''
  8 print(('.'.join(email.split('@'))).split('.'))

>>> email
'name@domain.com'
>>> a = email.split('@')
>>> email
'name@domain.com'
>>> a
['name', 'domain.com']
>>> b = '.'.join(a)
>>> b
'name.domain.com'
>>> c = b.split('.')
>>> c
['name', 'domain', 'com']
>>> 
___________________________________________________________________________________________________________________________________________________________________________




___________________________________________________________________________________________________________________________________________________________________________




___________________________________________________________________________________________________________________________________________________________________________




___________________________________________________________________________________________________________________________________________________________________________





___________________________________________________________________________________________________________________________________________________________________________
student@lin-ops:~$ python3
Python 3.6.9 (default, Nov 25 2022, 14:10:45) 
[GCC 8.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> a = 1
>>> print a
  File "<stdin>", line 1
    print a
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(a)?
>>> print(a)
1
>>> type()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: type() takes 1 or 3 arguments
>>> type(a)
<class 'int'>
>>> type(1.0)
<class 'float'>
>>> type(b)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'b' is not defined
>>> type('b')
<class 'str'>
>>> b = 'b'
>>> print(b)
b
>>> type(b)
<class 'str'>
>>> a = 1
>>> b = 2
>>> a + b
3
>>> a + 1.1
2.1
>>> 'Hello' + ' ' + 'World!'
'Hello World!'
>>> 
>>> 'Hello ' * 5
'Hello Hello Hello Hello Hello '
>>> 15 / 8
1.875
>>> 15 // 8
1
>>> 15 % 8
7
>>> 15 ** 8
2562890625
>>> 12 ** 2
144
>>> 3 ** 4
81
>>> 
>>> '{} {}!'.format('Hello',' World')
'Hello  World!'
>>> '{} {}!'.format('Hello','World')
'Hello World!'
>>> 
>>> c = str(7)
>>> c
'7'
>>> type(c)
<class 'str'>
>>> 
>>> tuple
>>> list('hello world')
['h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd']
>>> tuple('hello world')
('h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd')
>>> d = list('hello world')
>>> d
['h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd']
>>> d[0]
'h'
>>> d[1]
'e'
>>> d[2]
'l'
>>> d[3]
'l'
>>> d[4]
'o'
>>> 
>>> d[-1]
'd'
>>> d[-2]
'l'
>>> d[-3]
'r'
>>> 
>>> tuple('hello world')[0]
'h'
>>> e = tuple('hello world')
>>> e
('h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd')
>>> 
>>> d
['h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd']
>>> e
('h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd')
>>> dlist = d
>>> etuple = e
>>> dlist
['h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd']
>>> etuple
('h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd')
>>> 
>>> dlist.append('!')
>>> dlist
['h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd', '!']
>>> etuple.append('!')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'tuple' object has no attribute 'append'
>>> a = 'Hello World!'
>>> a
'Hello World!'
>>> a.append('a')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'str' object has no attribute 'append'
>>> 
>>> a
'Hello World!'
>>> a += 'AHHHHHH"
  File "<stdin>", line 1
    a += 'AHHHHHH"
                 ^
SyntaxError: EOL while scanning string literal
>>> a += 'AHHHHHH'
>>> a
'Hello World!AHHHHHH'
>>> a = 'Hello World!'
>>> a
'Hello World!'
>>> 
>>> ''.join(dlist)
'hello world!'
>>> '*'.join(dlist)
'h*e*l*l*o* *w*o*r*l*d*!'
>>> '|'.join(dlist)
'h|e|l|l|o| |w|o|r|l|d|!'
>>> ''.join(dlist)
'hello world!'
>>> ' '.join(dlist)
'h e l l o   w o r l d !'
>>> a = ''.join(dlist)
>>> a = ''.join(dlist)
>>> 
>>> a
'hello world!'
>>> dlist[0] = H
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'H' is not defined
>>> dlist
['h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd', '!']
>>> ' '.join(dlist)
'h e l l o   w o r l d !'
>>> dlist[0] = j
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'j' is not defined
>>> dlist[0] = 'j'
>>> dlist
['j', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd', '!']
>>> dlist[0] = 'H'
>>> dlist
['H', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd', '!']
>>> 
>>> 
>>> email = 'name@domain.com'
>>> email
'name@domain.com'
>>> email.split()
['name@domain.com']
>>> email.split(' ')
['name@domain.com']
>>> email.split('@','.')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'str' object cannot be interpreted as an integer
>>> email
'name@domain.com'
>>> email.split('@','.')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'str' object cannot be interpreted as an integer
>>> 
>>> email
'name@domain.com'
>>> email.split('@','.')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'str' object cannot be interpreted as an integer
>>> 
>>> lst
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'lst' is not defined
>>> lst = []
>>> lst
[]
>>> tup = ()
>>> tup
()
>>> 
___________________________________________________________________________________________________________________________________________________________________________
